--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,3 +1,37 @@
+# name: Django CI
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+#   build:
+
+#     runs-on: ubuntu-latest
+#     strategy:
+#       max-parallel: 4
+#       matrix:
+#         python-version: [3.12]
+
+#     steps:
+#     - uses: actions/checkout@v4
+#     - name: Set up Python ${{ matrix.python-version }}
+#       uses: actions/setup-python@v3
+#       with:
+#         python-version: ${{ matrix.python-version }}
+#     - name: Install Dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install -r requirements.txt
+#     - name: Run Tests
+#       run: |
+#         python blogsite/manage.py test
+#     - name: Run Server
+#       run: |
+#         python blogsite/manage.py runserver
+
 name: Django CI
 
 on:
@@ -15,20 +49,41 @@ jobs:
       matrix:
         python-version: [3.12]
 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: ankanaich
+          MYSQL_DATABASE: blogsite
+          MYSQL_USER: root
+          MYSQL_PASSWORD: password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+    - name: Wait for MySQL to be ready
+      run: sleep 15
+    
+    - name: Run Migrations
+      run: python blogsite/manage.py migrate
+    
     - name: Run Tests
-      run: |
-        python blogsite/manage.py test
+      run: python blogsite/manage.py test
+    
     - name: Run Server
-      run: |
-        python blogsite/manage.py runserver
+      run: python blogsite/manage.py runserver
+
       
